<?xml version="1.0"?>
<package format="3">
  <name>wheelchair-caninterface</name>
  <version>0.0.1</version>
  <description>ROS node that interfaces with the CAN interface of the RITMEA wheelchairs.</description>

  <maintainer email="gerald.dherbomez@cnrs.fr">Gerald Dherbomez, CRIStAL CNRS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

